0.9.2
- monetdb_queryinfo method to find out things about an arbitrary query cheaply
- new options monetdb.sequential, monetdb.debug.query and monetdb.debug.mapi
- debug output now uses the message() function

0.9.1
- dbGetInfo() now supported on MonetDBConnection (dplyr compatibility)
- dbTransaction(), dbCommit() and dbRollback() support
- fixed leaking of socket variable in dbConnect()
- fixed monetdb.server.setup for UNIX-like systems (Thanks, Enzo)
- fixed issue in dbClearResult() which produced a protocol error

0.9
- various extensions to monetdb.read.csv
- removed monet.frame from this package, moved to github

0.8.5
- added parameters newline and quote to monetdb.write.csv

0.8.4
- fixed bug when reading empty table (Thanks, Anthony)
- removed assertion in mapisplit.c that triggered sometimes for unclear reasons

0.8.3
- fixed a problem where integer SEXPs turned to double somehow

0.8.2
- fixed bug in dbConnect() where port and timeout were not always integer values

0.8.1
- fixed bug in dbWriteTable() where VARCHAR(255) was used for character data instead of STRING

0.8
- New All-C socket code (Thanks, Windows)
- new dbConnect() parameter organization (!)
- new mc() shorthand method for db connections

0.7.10
- More tip-toeing around in dbConnect()
- More error-tolerant MAPI parsing

0.7.9
- Changes in dbConnect() error handling

0.7.8
- fix for [, large offsets are not translated to SQL correctly

0.7.7
- fix for aggregatef(), formula arguments were not evaluated in the right direction
- support for mathematical operations on boolean columns

0.7.6
- fix for C implementation for line splitting

0.7.5
- more fetch() fixes

0.7.4
- string to line splitting to c, NA handling to C as well

0.7.3
- c implementation of very expensive function

0.7.2
- fetch() performance enhancements and bug fixes

0.7.1
- minor fixes to fetch() function from basic DBI

0.7
- some cran compatibility changes

0.6.4
- tabulate() support
- unique() support
- bugfix in subset()
